feat(scss): basic styles

--- a/src/assets/styles/common/_font.scss
+++ b/src/assets/styles/common/_font.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: Montserrat;
-  src:  url('./font/Montserrat-Black.ttf') format('ttf'),
-        url('./font/Montserrat-Bold.ttf') format('ttf'),
-        url('./font/Montserrat-Medium.ttf') format('ttf'),
-        url('./font/Montserrat-Light.ttf') format('ttf'),
-        url('./font/Montserrat-Regular.ttf') format('ttf'),
-        url('./font/Montserrat-SemiBold.ttf') format('ttf'),
+  src:  url('../../font/Montserrat-Black.ttf') format('ttf'),
+        url('../../font/Montserrat-Bold.ttf') format('ttf'),
+        url('../../font/Montserrat-Medium.ttf') format('ttf'),
+        url('../../font/Montserrat-Light.ttf') format('ttf'),
+        url('../../font/Montserrat-Regular.ttf') format('ttf'),
+        url('../../font/Montserrat-SemiBold.ttf') format('ttf'),
 }
