feat(header): wip

--- a/src/assets/styles/common/_base.scss
+++ b/src/assets/styles/common/_base.scss
@@ -12,6 +12,10 @@ ul {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: 'Monserrat', Arial, sans-serif;
   text-rendering: optimizeLegibility;
