feat(header): top header

--- a/src/assets/styles/common/_base.scss
+++ b/src/assets/styles/common/_base.scss
@@ -18,7 +18,14 @@ a {
 
 body {
   font-family: 'Monserrat', Arial, sans-serif;
+  font-size: 14px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
 }
