--- a/src/assets/styles/common/_font.scss
+++ b/src/assets/styles/common/_font.scss
@@ -2,6 +2,7 @@
   font-family: Montserrat;
   src:  url('../../font/Montserrat-Black.ttf') format('ttf'),
         url('../../font/Montserrat-Bold.ttf') format('ttf'),
+        url('../../font/Montserrat-ExtraBold.ttf') format('ttf'),
         url('../../font/Montserrat-Medium.ttf') format('ttf'),
         url('../../font/Montserrat-Light.ttf') format('ttf'),
         url('../../font/Montserrat-Regular.ttf') format('ttf'),
