--- a/src/components/AppHeader/appHeader.scss
+++ b/src/components/AppHeader/appHeader.scss
@@ -1,5 +1,48 @@
 @import '../../assets/styles/common/vars';
 
-.appHeader {
+.header {
   background-color: $main-blue;
+  padding: 8px 16px 0 16px;
+  width: 100%;
+  * {
+    color: #fff;
+  }
+  .container {
+    background-color: $main-blue;
+  }
+}
+
+.headerTop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 25px;
+  width: 100%;
+  background-color: $main-blue;
+
+  &__logo {
+    width: 166px;
+    height: 29px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  &__small {
+    display: block;
+    font-weight: 500;
+    margin-top: -5px;
+    font-size: 9px;
+    line-height: 11px;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+    opacity: 0.8;
+  }
+
+  &__anchor {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: right;
+  }
 }
