feat(header): header done

--- a/src/assets/styles/common/_base.scss
+++ b/src/assets/styles/common/_base.scss
@@ -16,6 +16,10 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin: 0;
+}
+
 body {
   font-family: 'Monserrat', Arial, sans-serif;
   font-size: 14px;
