feat(features) features desctop done

--- a/src/components/PiggyLabel/piggy-label.scss
+++ b/src/components/PiggyLabel/piggy-label.scss
@@ -12,5 +12,6 @@
   background-image: url('../../assets/img/mini-swin.svg');
   background-repeat: no-repeat;
   background-position: 10px 10px;
+  margin: 0 24px;
   margin-bottom: 25px;
 }
