--- a/src/components/Features/features.scss
+++ b/src/components/Features/features.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/common/vars';
+
 .featuresList {
   padding: 10px 16px 52px 20px;
 
@@ -9,6 +11,10 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+
+    span {
+      display: inline-block;
+    }
 
     &_check {
       background-image: url('../../assets/img/check.svg');
@@ -44,4 +50,45 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media screen and (min-width: $breakpoint) {
+    .piggyLabel {
+      display: none;
+    }
+  }
+}
+
+@media screen and (min-width: $breakpoint) {
+  .featuresList {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 55px 16px 52px 0;
+
+    &__item {
+      background-position: center top;
+      text-align: center;
+      padding: 0;
+
+      span {
+        display: inline-block;
+        padding-top: 70px;
+        max-width: 265px;
+      }
+
+      &_star {
+        span {
+          padding-top: 100px;
+        }
+
+        &::before {
+          left: 20px;
+          bottom: 20px;
+          height: 16px;
+          margin-bottom: 10px;
+        }
+      }
+    }
+
+  }
 }
