--- a/src/assets/styles/common/_base.scss
+++ b/src/assets/styles/common/_base.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/montserrat');
+
 *,
 *::before,
 *::after {
@@ -20,8 +22,12 @@ p {
   margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
 body {
-  font-family: 'Monserrat', Arial, sans-serif;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   font-size: 14px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
