feat(zip): desktop done

--- a/src/components/AppFooter/appFooter.scss
+++ b/src/components/AppFooter/appFooter.scss
@@ -23,12 +23,17 @@
 
   &__item {
     margin-bottom: 16px;
+    
     a {
       color: #fff;
       font-weight: 500;
       font-size: 14px;
       line-height: 16px;
       margin-bottom: 16px;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
     &:last-child {
       margin-bottom: 0;
