feat(modal): 1st modal desktop

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -11,7 +11,7 @@
   bottom: 0;
 
   h3 {
-    max-width: 800px;
+    max-width: 760px;
     font-weight: 700;
     font-size: 23px;
     line-height: 32px;
@@ -26,6 +26,7 @@
     @media screen and (min-width: $breakpoint) {
       margin-top: 96px;
       margin-bottom: 24px;
+      font-size: 25px;
     }
   }
 
@@ -95,6 +96,33 @@
     background-size: 40px;
   }
 
+  @media screen and (min-width: $breakpoint) {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    &__yes,
+    &__no {
+      padding: 0;
+      width: 168px;
+      height: 140px;
+      background-position: top center;
+      text-align: center;
+      background-position: 63px 36px;
+      margin-bottom: 24px;
+
+      span {
+        display: block;
+        padding-top: 80px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 20px;
+      }
+    }
+    &__yes {
+      margin-right: 16px;
+    }
+  }
+
   &__yes {
     background-image: url('../../assets/img/yes.svg');
   }
@@ -110,5 +138,9 @@
     margin: 0 auto;
     margin-left: 16px;
     margin-right: 16px;;
+  }
+
+  &__btn {
+    margin-right: 30px;
   }
 }
