--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -169,7 +169,7 @@
   align-items: center;
   justify-content: center;
 
-  &__btn {
+  &__next {
     width: 100%;
     padding: 0 16px;
     .button {
@@ -179,7 +179,7 @@
   }
 
   @media screen and (min-width: $breakpoint) {
-    &__btn {
+    &__next {
       width: 100%;
       display: flex;
       justify-content: center;
