--- a/src/components/Features/features.scss
+++ b/src/components/Features/features.scss
@@ -47,6 +47,20 @@
   }
 }
 
+.piggyLabel {
+  padding: 10px 10px 10px 40px;
+  border: 1px solid #FA8C16;
+  background: #F5F6FE;
+  margin-bottom: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+  border-radius: 8px;
+  background-image: url('../../assets/img/mini-swin.svg');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+}
+
 .container_features {
   display: flex;
   flex-direction: column;
