--- a/src/components/AppHeader/appHeader.scss
+++ b/src/components/AppHeader/appHeader.scss
@@ -1,15 +1,15 @@
+@use "sass:math";
+@use '../../assets/styles/common/functions' as func;
 @import '../../assets/styles/common/vars';
 
 .header {
   background-color: $main-blue;
-  padding: 16px 16px 52px 16px;
-  width: 100%;
 
   * {
     color: #fff;
   }
 
-  .container {
+  &__container {
     background-color: $main-blue;
   }
 }
@@ -18,32 +18,42 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
   width: 100%;
   background-color: $main-blue;
+  column-gap: 1rem;
+  min-height: 53px;
 
   &__logo {
-    width: 166px;
-    height: 29px;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
+    display: flex;
+    flex-direction: column;
+    column-gap: 3px;
 
     img {
-      width: 206px;
-      height: 37px;
+      display: block;
+      width: 166px;
+      aspect-ratio: 166/29;
+      height: 100%;
+
+      @media (min-width: #{375px + 1px}) and (max-width: #{$breakpoint - 1}) {
+        width: func.fluid(166px, 206px, 375px, $breakpoint);
+      }
+      
+      @media (min-width: $breakpoint) {
+        width: 206px;
+      }
     }
   }
 
   &__small {
     display: block;
-    font-weight: 500;
-    margin-top: -5px;
+    font-weight: 400;
     font-size: 9px;
     line-height: 11px;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.18em;
     text-transform: uppercase;
     opacity: 0.8;
+    min-width: max-content;
+    white-space: nowrap;
   }
 
   &__anchor {
@@ -101,8 +111,32 @@
   }
 }
 
+.menu {
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    &:not(:empty) {
+      margin: -1em;
+    }
+  }
+  &__item {
+    padding: 1em;
+    font-size: 0.875rem;
+  }
+  &__anchor {
+    letter-spacing: 0.06rem;
+  }
+}
+
+@media (min-width: #{375px + 1px}) and (max-width: #{$breakpoint - 1}) {
+  .headerTop {
+    padding-top: func.fluid(8px, 19px, 375px, $breakpoint);
+  }
+}
+
 // Media 
-@media screen and (min-width: $breakpoint) {
+@media (min-width: $breakpoint) {
   .headerBottom {
     display: flex;
     justify-content: space-between;
@@ -133,6 +167,7 @@
   }
 
   .headerTop {
+    padding-top: 19px;
     padding-bottom: 90px;
 
     &__logo {
